[metadata]
name = rrtplanner
version = attr: rrtplanner.__version__
author = Mike Sutherland
author_email = msutherl@uci.edu
url = https://github.com/rland93/rrtplanner
description = "Software for vehicle path planning using RRT."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = robotics, path planning, research
license  = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    cvxpy >= 1.2
    numba >= 0.55
    tqdm >= 3
    networkx >= 2.5
    matplotlib >= 3.5
    pyfastnoisesimd >= 0.4


[options.packages.find]
where = src


[options.extras_require]
notebook = 
    jupyter >= 1.0.0
dev = 
    black >= 22.3
    Sphinx >= 4.5
    sphinx-autoapi >= 1.8
    sphinx-rtd-theme >= 1.0